--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
     "@mui/x-data-grid": "^5.9.0",
     "material-ui-search-bar": "^1.0.0",
